--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,11 +38,8 @@ bind -n M-Down select-pane -D
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
-
-set -g @dracula-plugins "cpu-usage ram-usage time"
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon smiley
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @tmux-gruvbox 'dark'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
